# vascx_simplify

./: .gitignore  ACKNOWLEDGMENTS.md  BATCH_PROCESSING_SUMMARY.md  CHANGES.md  DOCKER.md  Dockerfile  Dockerfile.cuda  LICENSE  MANIFEST.in  Makefile  PACKAGE_COMPLETE.md  PYPI_PUBLISHING.md  QUICKSTART.md  README.md  build.ps1  docker-compose.yml  inference.py  preprocess.py  pyproject.toml  requirements.txt  setup.py  test_batch.py  test_phase3.py  utils.py
.github/: copilot-commands.json  copilot-instructions.md
.github/workflows/: build-and-publish.yml  tests.yml
docs/: BATCH_PROCESSING_SUMMARY.md  BEST_PRACTICES.md  DEVELOPMENT.md  PERFORMANCE.md  PLAN01_REFACTOR.md  PLAN02_BATCH_PROCESSING.md  PLAN03_MODULAR_REFACTOR.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  TODO.md  UTILS.md
examples/: 01_artery_vein.py  02_disc_segment.py  03_fovea_regression.py  04_quality_classify.py  05_batch_fovea.py  05_batch_processing.py  06_performance_analysis.py  06_utils_demo.py  07_contrast_enhancement.py  08_simple_contrast.py  09_simple_class_demo.py  basic_usage.py
src/simple_vascx/: __init__.py  inference.py
src/vascx_simplify/: __init__.py  inference.py  preprocess.py  utils.py
src/vascx_simplify/inference/: __init__.py  base.py  classification.py  heatmap.py  regression.py  segmentation.py  sliding_window.py
src/vascx_simplify/preprocess/: __init__.py  contrast.py  transform.py
src/vascx_simplify/utils/: __init__.py  geometry.py  huggingface.py  image.py  stats.py  transforms.py  visualization.py
tests/: __init__.py  conftest.py  test_inference.py  test_preprocess.py  test_utils.py
